ajout de la search bar

--- a/src/composants/authentification/authentification.component.html
+++ b/src/composants/authentification/authentification.component.html
@@ -16,12 +16,12 @@
         
     </form>
     <form [formGroup]="createUserForm" (submit)="CreatUser()">
-        <label for="Email"> Email </label>
-        <input id="Email" type="text" formControlName="Email">
-        <label for="Username"> Username </label>
-        <input id="Username" type="text" formControlName="username">
-        <label for="password"> password </label>
-        <input id="password" type="password" formControlName="password">
+        <label for="New_Email"> Email </label>
+        <input id="New_Email" type="text" formControlName="New_Email">
+        <label for="New_Username"> Username </label>
+        <input id="New_Username" type="text" formControlName="New_username">
+        <label for="New_password"> password </label>
+        <input id="New_password" type="password" formControlName="New_password">
         <button type="submit"> Create User </button>
     </form>
 </div>
