--- a/src/composants/search-bar/search-bar.component.html
+++ b/src/composants/search-bar/search-bar.component.html
@@ -1,1 +1,9 @@
-<p>search-bar works!</p>
+<p>search-bar</p>
+
+<form [formGroup]="userToLookFor" (submit)="fetchUser()">
+    <input formControlName="usernameToLookFor">
+</form>
+
+@for(user of userList;track user.Email){
+    <p> {{ user.Username }}</p>
+}
