petite upgrade frontend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-authentification></app-authentification>
-<app-conversation></app-conversation>
-<app-search-bar></app-search-bar>
+<div id="content">
+    <app-search-bar></app-search-bar>
+    <app-authentification></app-authentification>
+    <app-conversation></app-conversation>
+</div>
+
