--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,13 @@
            routerLink="/Public_Conversation"
            routerLinkActive="activebutton"
            ariaCurrentWhenActive="page">
-           Public_Conversation
+            <img id="logo" src="./../assets/graphicalElements/home.png">
         </a> |
         <a class="button"
            routerLink="/Conversation"
            routerLinkActive="activebutton"
            ariaCurrentWhenActive="page">
-           Conversation
+           <img id="logo" src="./../assets/graphicalElements/chat.png">
         </a>
       </nav>
 </div>
